[package]
name = "ces_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
futures = "0.3"
indicatif = "0.17"
thirtyfour = "0.34"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
